--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.554.0",
-    "next": "16.0.4",
+    "next": "^16.1.1",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
